# plover-clr-trans-state

./: .gitignore  LICENSE  README.md  plover_clr_trans_state.py  setup.cfg
