[metadata]
name = plover-clr-trans-state
version = 0.0.0
author = AbyxDev
description = Plover plugin that adds a command to clear the translation state
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/Kenny2github/plover-clr-trans-state
classifiers =
	Environment :: Plugins
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
py_modules = plover_clr_trans_state

[options.entry_points]
plover.command =
	clear_trans_state = plover_clr_trans_state:clear_state